@@ -33,6 +33,9 @@ version 0.76cvs:
 	* Tabs now stay green when they are supposed to (Etan Reisner)
 	* Fixed a bug where only the first user in a chat room list was removed
 	  sometimes when trying to remove a group of users (Tim Ringenbach)
+	* Clearing an AIM buddy icon actually removes it from the server,
+	  icons changes in the account editor do not take effect if the
+	  canel button is used (Stu Tomlinson)
 	* Improved chat parting logic (Tim Ringenbach)
 	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
 	* TCL Plugin API changed
